--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        clang_version: ['latest']
+        clang_version: ['17']
         cuda: ['11.0']
         rocm_version: ['5.4.3']
         os: ['ubuntu-20.04']
@@ -42,11 +42,9 @@ jobs:
       run: |
         wget https://apt.llvm.org/llvm.sh
         chmod +x llvm.sh
-        sudo ./llvm.sh
-        sudo apt install libclang-dev clang-tools libomp-dev
+        sudo ./llvm.sh ${{matrix.clang_version}}
+        sudo apt install libclang-${{matrix.clang_version}}-dev clang-tools-${{matrix.clang_version}} libomp-${{matrix.clang_version}}-dev
     - name: install boost (from apt)
-      if: matrix.os == 'ubuntu-20.04'
-      run: |
         sudo apt install libboost-all-dev
     - name: build Open SYCL
       run: |
