--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -45,6 +45,7 @@ jobs:
         sudo ./llvm.sh ${{matrix.clang_version}}
         sudo apt install libclang-${{matrix.clang_version}}-dev clang-tools-${{matrix.clang_version}} libomp-${{matrix.clang_version}}-dev
     - name: install boost (from apt)
+      run: |
         sudo apt install libboost-all-dev
     - name: build Open SYCL
       run: |
