--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -46,6 +46,9 @@ jobs:
         sudo apt install libclang-${{matrix.clang_version}}-dev clang-tools-${{matrix.clang_version}} libomp-${{matrix.clang_version}}-dev
         echo "CC=clang-${{matrix.clang_version}}" >> $GITHUB_ENV
         echo "CXX=clang++-${{matrix.clang_version}}" >> $GITHUB_ENV
+        which clang++-${{matrix.clang_version}}
+        ls -al /usr/bin
+        ls -al /usr/lib/llvm-17/cmake
     - name: install boost (from apt)
       run: |
         sudo apt install libboost-all-dev
