--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -12,7 +12,7 @@ on:
         required: true
         default: 'develop'
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 5 * * 1,4'
 
 
 jobs:
