--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -24,7 +24,7 @@ jobs:
         clang_version: ['17']
         cuda: ['11.0']
         rocm_version: ['5.6.1']
-        os: ['ubuntu-22.04']
+        os: ['ubuntu-20.04']
     steps:
     - uses: actions/checkout@v2
     - name: setup env
@@ -55,8 +55,7 @@ jobs:
       run: |
         sudo apt install libnuma-dev cmake unzip
         wget -q -O - https://repo.radeon.com/rocm/rocm.gpg.key | sudo apt-key add -
-        echo 'Package: *\nPin: release o=repo.radeon.com\nPin-Priority: 600' | sudo tee /etc/apt/preferences.d/rocm-pin-600
-        echo 'deb [arch=amd64] https://repo.radeon.com/rocm/apt/${{matrix.rocm_version}} jammy main' | sudo tee /etc/apt/sources.list.d/rocm.list
+        echo 'deb [arch=amd64] https://repo.radeon.com/rocm/apt/${{matrix.rocm_version}} focal main' | sudo tee /etc/apt/sources.list.d/rocm.list
         sudo apt update
         sudo apt install rocm-dev
     - name: install LLVM
