--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -19,12 +19,13 @@ jobs:
   test-llvm-upstream:
     name: AdaptiveCpp/AdaptiveCpp with clang ${{ matrix.clang_version }}
     runs-on: ${{ matrix.os }}
+    continue-on-error: true
     strategy:
       matrix:
         clang_version: ['17']
         cuda: ['11.0']
-        rocm_version: ['5.6.1']
-        os: ['ubuntu-20.04']
+        rocm_version: ['5.4.6', '5.5.3', '5.6.1', '5.7']
+        os: ['ubuntu-20.04', 'ubuntu-22.04']
     steps:
     - uses: actions/checkout@v2
     - name: setup env
