--- a/.github/workflows/weekly-acpp-llvm.yml
+++ b/.github/workflows/weekly-acpp-llvm.yml
@@ -49,7 +49,9 @@ jobs:
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2
       with:
-        key: ${{ github.job }}
+        key: ${{ github.job }}-${{matrix.clang_version}}-${{matrix.cuda_or_rocm}}
+        restore-keys: |
+          ${{ github.job }}
     - name: clone LLVM
       run: |
         git clone --recurse-submodules https://github.com/llvm/llvm-project --single-branch -b release/${{matrix.clang_version}}.x llvm
