--- a/.github/workflows/weekly-acpp-llvm.yml
+++ b/.github/workflows/weekly-acpp-llvm.yml
@@ -97,7 +97,7 @@ jobs:
         cd ${GITHUB_WORKSPACE}/build/tests-cpu
         clang++ -fopenmp /dev/null -L/usr/lib/llvm-${{matrix.clang_version}}/lib -v -shared -o /dev/null 
         clang -fopenmp /dev/null -L/usr/lib/llvm-${{matrix.clang_version}}/lib -v -shared -o /dev/null 
-        cmake -GNinja -DACPP_TARGETS="omp" -DAdaptiveCpp_DIR=${GITHUB_WORKSPACE}/install/lib/cmake/AdaptiveCpp ${GITHUB_WORKSPACE}/AdaptiveCpp/tests -DCMAKE_EXE_LINKER_FLAGS="-L/usr/lib/llvm-${{matrix.clang_version}}/lib"
+        cmake -GNinja -DACPP_TARGETS="omp" -DAdaptiveCpp_DIR=${GITHUB_WORKSPACE}/install/lib/cmake/AdaptiveCpp ${GITHUB_WORKSPACE}/AdaptiveCpp/tests -DCMAKE_EXE_LINKER_FLAGS="-L/usr/lib/llvm-${{matrix.clang_version}}/lib" -DOpenMP_ROOT="/usr/lib/llvm-${{matrix.clang_version}}/""
         ninja -j2
     - name: build generic SSCP tests
       if: matrix.clang_version >= 14
