More OpenMP Debug.

--- a/.github/workflows/weekly-acpp-llvm.yml
+++ b/.github/workflows/weekly-acpp-llvm.yml
@@ -45,6 +45,8 @@ jobs:
         sudo ./llvm.sh ${{matrix.clang_version}}
         sudo apt install libclang-${{matrix.clang_version}}-dev clang-tools-${{matrix.clang_version}} libomp-${{matrix.clang_version}}-dev ninja-build cmake
         sudo ln -s /usr/lib/llvm-${{matrix.clang_version}}/lib/libomp.so /usr/lib/libomp.so
+        ls -alh /usr/lib/llvm-${{matrix.clang_version}}/lib
+        echo "LD_LIBRARY_PATH=/usr/lib/llvm-${{matrix.clang_version}}/lib" >> $GITHUB_ENV
         echo "CC=clang-${{matrix.clang_version}}" >> $GITHUB_ENV
         echo "CXX=clang++-${{matrix.clang_version}}" >> $GITHUB_ENV
     - name: ccache
